--- a/PdfDemo/packages.config
+++ b/PdfDemo/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="iTextSharp" version="5.5.13.1" targetFramework="net461" />
+  <package id="itextsharp.xmlworker" version="5.5.13.1" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net461" />
 </packages>
